<resources>

    <string name="app_name">QRShop_AndroidApp</string>
    <string name="very_cool_design">Very cool design!</string>
    <string name="LoginFragment_loginEditText">Login</string>
    <string name="LoginFragment_passwordEditText">Password</string>
    <string name="LoginFragment_loginButton">Login</string>
    <string name="LoginFragment_signUpTextView">Sign Up</string>
    <string name="LoginFragment_wrongTextView">Wrong login or password</string>
    <string name="SignUpFragment_loginEditText">Login</string>
    <string name="SignUpFragment_passwordEditText">Password</string>
    <string name="SignUpFragment_repeatPasswordEditText">Repeat password</string>
    <string name="SignUpFragment_signUpButton">Sign Up</string>
    <string name="SignUpFragment_nameEditText">Name</string>
    <string name="MainMenuFragment_SettingsMenuBtn">Settings</string>
    <string name="MainMenuFragment_CartMenuBtn">Cart</string>
    <string name="MainMenuFragment_ExitMenuBtn">Exit</string>
    <string name="MainMenuFragment_UserNameTextView">currentUserName</string>
    <string name="MainMenuFragment_cashTextView">currentUserCash</string>
    <string name="MainMenuFragment_cartCountTextView">productsInCartCount</string>
    <string name="MainMenuFragment_addNewToCartButton">Add new to cart</string>
    <string name="MainMenuFragment_finishPaymentButton">Finish payment</string>
    <string name="CartList_standardString">null</string>

</resources>
