<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainMenuFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="302dp"
            android:layout_marginEnd="176dp"
            android:layout_marginBottom="350dp"
            android:text="@string/MainMenuFragment_UserNameTextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userCashTextView"
            android:layout_width="133dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="309dp"
            android:text="@string/MainMenuFragment_cashTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <TextView
            android:id="@+id/cartCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="309dp"
            android:text="@string/MainMenuFragment_cartCountTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userCashTextView"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

        <Button
            android:id="@+id/addNewToCartButton"
            android:layout_width="131dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="199dp"
            android:text="@string/MainMenuFragment_addNewToCartButton"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/finishPaymentButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userCashTextView" />

        <Button
            android:id="@+id/finishPaymentButton"
            android:layout_width="131dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="199dp"
            android:text="@string/MainMenuFragment_finishPaymentButton"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addNewToCartButton"
            app:layout_constraintTop_toBottomOf="@+id/cartCountTextView" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>