<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignUpFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/loginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="202dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/SignUpFragment_loginEditText"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="415dp"
            android:ems="10"
            android:hint="@string/SignUpFragment_passwordEditText"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEditText" />

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="344dp"
            android:ems="10"
            android:hint="@string/SignUpFragment_repeatPasswordEditText"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="210dp"
            android:layout_height="52dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="270dp"
            android:text="@string/SignUpFragment_signUpButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>